@@ -1,4 +1,4 @@
-SUBDIRS = citylife cfpython cfanim common cflogger cfnewspaper
+SUBDIRS = cfrhg citylife cfpython cfanim common cflogger cfnewspaper
 
 DISTCHECK_CONFIGURE_FLAGS = --localstatedir=$$dc_install_base/var --mandir=$$dc_install_base/man
 
